--- a/package.json
+++ b/package.json
@@ -1,8 +1,17 @@
 {
-  "name": "action-listener",
+  "name": "react-redux-action-observer",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
+  "main": "lib/index.js",
+  "dependencies": {},
+  "peerDependencies": {
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0",
+    "redux": ">=4.0.0"
+  },
+  "devDependencies": {
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-node-resolve": "^11.0.0",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
@@ -10,17 +19,29 @@
     "@types/node": "^12.19.8",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
+    "@types/react-redux": "^7.1.11",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
+    "redux": "^4.0.5",
+    "rollup": "^2.34.2",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-typescript2": "^0.29.0",
+    "rollup-plugin-uglify": "^6.0.4",
     "typescript": "^4.1.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
     "build": "react-scripts build",
+    "start": "react-scripts start",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build-package": "rollup -c",
+    "watch-package": "rollup -c -w",
+    "link-package": "npm link react-redux-action-observer",
+    "link": "npm link && npm link react-redux-action-observer",
+    "unlink": "npm link react-redux-action-observer && npm unlink"
   },
   "eslintConfig": {
     "extends": [
